--- a/gfarm2fs/trunk/config.h.in
+++ b/gfarm2fs/trunk/config.h.in
@@ -1,5 +1,8 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* support extended attribute */
+#undef ENABLE_XATTR
+
 /* Define to 1 if you have the <dlfcn.h> header file. */
 #undef HAVE_DLFCN_H
 
