--- a/gfarm2fs/branches/1.1.1/configure.ac
+++ b/gfarm2fs/branches/1.1.1/configure.ac
@@ -14,20 +14,18 @@ AC_SYS_LARGEFILE
 AC_PROG_CC
 AC_PROG_LIBTOOL
 
-### --with-gfarm=gfarm_ROOT
-AC_MSG_CHECKING([Gfarm file system package])
+### --with-gfarm=GFARM_ROOT
+AC_MSG_CHECKING([for Gfarm file system])
 AC_ARG_WITH([gfarm],
-  AC_HELP_STRING([--with-gfarm=PATH], [path to gfarm file system [[/usr]]]),
-   [gfarm_prefix=$withval],
-   [gfarm_prefix=no])
-
-if test x"$gfarm_prefix" != xno; then
-  AC_MSG_RESULT([$gfarm_prefix])
-  CPPFLAGS="$CPPFLAGS -I$gfarm_prefix/include"
-  LDFLAGS="$LDFLAGS -R$gfarm_prefix/lib -L$gfarm_prefix/lib"
-else
-  AC_MSG_RESULT([/usr])
+  AC_HELP_STRING([--with-gfarm=GFARM_ROOT], [Gfarm root directory [[/usr]]]))
+case x$with_gfarm in
+  x|xyes|xno) with_gfarm=/usr ;;
+esac
+if test x"$with_gfarm" != x/usr; then
+  CPPFLAGS="$CPPFLAGS -I$with_gfarm/include"
+  LDFLAGS="$LDFLAGS -R$with_gfarm/lib -L$with_gfarm/lib"
 fi
+AC_MSG_RESULT([$with_gfarm])
 
 ### --enable-xattr
 ### by default this is disabled since it slows down the response of 'ls -l'
