--- a/gfarm2fs/trunk/Makefile.in
+++ b/gfarm2fs/trunk/Makefile.in
@@ -39,8 +39,8 @@ host_triplet = @host@
 bin_PROGRAMS = gfarm2fs$(EXEEXT)
 DIST_COMMON = $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(srcdir)/config.h.in \
-	$(top_srcdir)/configure config.guess config.sub depcomp \
-	install-sh ltmain.sh missing
+	$(top_srcdir)/configure INSTALL config.guess config.sub \
+	depcomp install-sh ltmain.sh missing
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
