--- a/gfarm2fs/trunk/Makefile.in
+++ b/gfarm2fs/trunk/Makefile.in
@@ -182,7 +182,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-gfarm2fs_SOURCES = gfarm2fs.c replicate.c
+gfarm2fs_SOURCES = gfarm2fs.c replicate.c gfarm2fs.h replicate.h
 AM_CFLAGS = -Wall
 EXTRA_DIST = RELNOTES LICENSE gfarm2fs.spec
 ASSIGNMSGNO = $(top_srcdir)/msgno/assign_msgno.pl
