--- a/gfarm2fs/trunk/config.h.in
+++ b/gfarm2fs/trunk/config.h.in
@@ -24,6 +24,9 @@
 /* Define to 1 if you have the <memory.h> header file. */
 #undef HAVE_MEMORY_H
 
+/* have private sources */
+#undef HAVE_PRIVATE_SRCS
+
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
 
