add comments and simplify configure.ac

--- a/gfarm2fs/trunk/configure.ac
+++ b/gfarm2fs/trunk/configure.ac
@@ -28,31 +28,25 @@ fi
 AC_MSG_RESULT([$with_gfarm])
 
 ### --with-private-srcdir
-private_srcdir=''
-AC_MSG_CHECKING([use of private source directory])
-AC_ARG_WITH(private_srcdir,
-[  --with-private-srcdir=DIR    private source directory
-],
-[private_srcdir="${withval}"
-],
-[private_srcdir=""
-])
-top_private_dir=''
-if test "x${private_srcdir}" = "x"; then
+### This is provided to replace some functionalities with your private code.
+AC_MSG_CHECKING([for private source directory])
+AC_ARG_WITH([private_srcdir],
+  AC_HELP_STRING([--with-private-srcdir=DIR], [private source directory]))
+case x$with_private_srcdir in
+x|xno)
+  top_private_dir=""
   private_srcs=""
-  have_private_srcs=""
-  AC_MSG_RESULT([not use.])
-else
-  if test -d "${private_srcdir}"; then
-    top_private_dir="`(cd ${private_srcdir}; /bin/pwd)`"
-    AC_MSG_RESULT([use ${top_private_dir}])
+  AC_MSG_RESULT([no]) ;;
+*)
+  if test -d "${with_private_srcdir}"; then
+    top_private_dir="`(cd ${with_private_srcdir}; /bin/pwd)`"
     private_srcs="replicate_private.c"
-    AC_DEFINE(HAVE_PRIVATE_SRCS, [], [have private sources])
+    AC_MSG_RESULT([${top_private_dir}])
+    AC_DEFINE(HAVE_PRIVATE_SRCS, [1], [Define to 1 if you have private sources])
   else
-    AC_MSG_RESULT([${private_srcdir} is not a directory.])
-    exit 1
+    AC_MSG_ERROR([${with_private_srcdir} is not a directory.])
   fi
-fi
+esac
 AC_SUBST(top_private_dir)
 AC_SUBST(private_srcs)
 
