- assigned gflog message number for existing code. - add generated header file to Makefile.am

--- a/gfarm2fs/trunk/Makefile.am
+++ b/gfarm2fs/trunk/Makefile.am
@@ -1,5 +1,6 @@
 bin_PROGRAMS = gfarm2fs
-gfarm2fs_SOURCES = gfarm2fs.c replicate.c gfarm2fs.h replicate.h
+gfarm2fs_SOURCES = gfarm2fs.c replicate.c gfarm2fs.h replicate.h \
+	gfarm2fs_msg_enums.h
 EXTRA_DIST = RELNOTES LICENSE gfarm2fs.spec $(private_srcs)
 AM_CFLAGS = -Wall
 
