--- a/gfarm2fs/trunk/Makefile.in
+++ b/gfarm2fs/trunk/Makefile.in
@@ -185,7 +185,9 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_private_dir = @top_private_dir@
-gfarm2fs_SOURCES = gfarm2fs.c replicate.c gfarm2fs.h replicate.h
+gfarm2fs_SOURCES = gfarm2fs.c replicate.c gfarm2fs.h replicate.h \
+	gfarm2fs_msg_enums.h
+
 EXTRA_DIST = RELNOTES LICENSE gfarm2fs.spec $(private_srcs)
 AM_CFLAGS = -Wall
 ASSIGNMSGNO = $(top_srcdir)/msgno/assign_msgno.pl
