--- a/gfarm_v2/trunk/regress/Makefile
+++ b/gfarm_v2/trunk/regress/Makefile
@@ -11,8 +11,9 @@ CHECK_ENV=	LANG=C PATH=$(prefix)/bin:$$PATH
 # subdirectories which have to be built
 SUBDIRS=	\
 	lib/libgfarm/gfarm/gfarm_error_range_alloc \
+	lib/libgfarm/gfarm/gfarm_error_to_errno \
 	lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/file_busy \
-	lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/in_progress \
+	lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/in_progress
 
 check test: all
 	@echo ""
