--- a/gfarm_v2/branches/2.3.1/gftool/gfreg/Makefile
+++ b/gfarm_v2/branches/2.3.1/gftool/gfreg/Makefile
@@ -9,7 +9,8 @@ include $(top_srcdir)/makes/var.mk
 SRCS = gfreg_simple.c
 OBJS = gfreg_simple.o
 PROGRAM = gfreg
-CFLAGS = $(COMMON_CFLAGS) -I$(GFUTIL_SRCDIR) -I$(GFARMLIB_SRCDIR)
+CFLAGS = $(COMMON_CFLAGS) -I$(GFUTIL_SRCDIR) -I$(GFARMLIB_SRCDIR) \
+	$(openssl_includes)
 LDLIBS = $(COMMON_LDFLAGS) $(GFARMLIB) $(LIBS)
 DEPLIBS = $(DEPGFARMLIB)
 
