fix "Unchecked Return Value" issues about pthread, pointed out by Fortify, via Teppei Baba-san
move thrsubr.c from server/gfmd/ to lib/libgfarm/gfutil/ for this purpose.

--- a/gfarm_v2/trunk/lib/libgfarm/gfutil/Makefile
+++ b/gfarm_v2/trunk/lib/libgfarm/gfutil/Makefile
@@ -20,6 +20,7 @@ SRCS =	alloc.c \
 	logutil.c \
 	lru_cache.c \
 	send_no_sigpipe.c \
+	thrsubr.c \
 	timer.c \
 	timeval.c
 OBJS =	alloc.lo \
@@ -33,6 +34,7 @@ OBJS =	alloc.lo \
 	logutil.lo \
 	lru_cache.lo \
 	send_no_sigpipe.lo \
+	thrsubr.lo \
 	timer.lo \
 	timeval.lo
 
