copy  source:gfarm/trunk/regress/lib/libgfarm/gfarm/gfs_pio_create@3257 to source:gfarm_v2/trunk/regress/lib/libgfarm/gfarm/gfs_pio_create/create

--- a/gfarm_v2/trunk/regress/regress.conf
+++ b/gfarm_v2/trunk/regress/regress.conf
@@ -24,7 +24,8 @@ fi
 : ${regress:=.}
 data=$regress/data
 testbase=`dirname $0`
-localtmp=/tmp/RT$$
+localtop=/tmp
+localtmp=${localtop}/RT$$
 if [ X"$regress" = X"." ]; then
 	testbin=$testbase
 else
