use source:gfarm_v2/trunk/regress/lib/libgfarm/gfarm/gfs_pio_test/gfs_pio_test.c instead of source:gfarm_v2/trunk/regress/lib/libgfarm/gfarm/gfs_pio_open/open_read/open_read.c@4689 and source:gfarm_v2/trunk/regress/lib/libgfarm/gfarm/gfs_pio_create/create/create.c@3257 to test gfs_pio functions

--- a/gfarm_v2/trunk/regress/lib/libgfarm/gfarm/gfs_pio_test/Makefile
+++ b/gfarm_v2/trunk/regress/lib/libgfarm/gfarm/gfs_pio_test/Makefile
@@ -1,10 +1,10 @@
-top_builddir = ../../../../../..
+top_builddir = ../../../../..
 top_srcdir = $(top_builddir)
 srcdir = .
 
 include $(top_srcdir)/makes/var.mk
 
-PROGRAM = open_read
+PROGRAM = gfs_pio_test
 SRCS = $(PROGRAM).c
 OBJS = $(PROGRAM).o
 CFLAGS = $(COMMON_CFLAGS)
