--- a/gfarm2fs/trunk/Makefile.in
+++ b/gfarm2fs/trunk/Makefile.in
@@ -54,7 +54,8 @@ CONFIG_CLEAN_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
-am_gfarm2fs_OBJECTS = gfarm2fs.$(OBJEXT) replicate.$(OBJEXT)
+am_gfarm2fs_OBJECTS = gfarm2fs.$(OBJEXT) replicate.$(OBJEXT) \
+	open_file.$(OBJEXT)
 gfarm2fs_OBJECTS = $(am_gfarm2fs_OBJECTS)
 gfarm2fs_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I.
@@ -184,8 +185,8 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_private_dir = @top_private_dir@
-gfarm2fs_SOURCES = gfarm2fs.c replicate.c gfarm2fs.h replicate.h \
-	gfarm2fs_msg_enums.h
+gfarm2fs_SOURCES = gfarm2fs.c replicate.c open_file.c \
+	gfarm2fs.h replicate.h open_file.h gfarm2fs_msg_enums.h
 
 EXTRA_DIST = RELNOTES LICENSE gfarm2fs.spec $(private_srcs)
 AM_CFLAGS = -Wall
@@ -284,6 +285,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gfarm2fs.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/open_file.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/replicate.Po@am__quote@
 
 .c.o:
