--- a/gfarm2fs/trunk/config.h.in
+++ b/gfarm2fs/trunk/config.h.in
@@ -12,6 +12,9 @@
 /* Define to 1 if you have the `gfarm_schedule_cache_dump' function. */
 #undef HAVE_GFARM_SCHEDULE_CACHE_DUMP
 
+/* Define to 1 if you have the `gfs_replicate_file_to' function. */
+#undef HAVE_GFS_REPLICATE_FILE_TO
+
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
