always link pthread library, because pthread_once() doesn't work without it on FreeBSD (and Solaris too?). this problem was spotted by Kiyoshi Imai-san.

--- a/gfarm_v2/trunk/makes/config.mk.in
+++ b/gfarm_v2/trunk/makes/config.mk.in
@@ -46,7 +46,7 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_DATA = @INSTALL_DATA@
 INSTALL_DOC = sh $(top_builddir)/makes/install-doc
 
-LIBS = @LIBS@
+LIBS = @LIBS@ $(pthread_libs)
 
 largefile_cflags = @largefile_cflags@
 largefile_ldflags = @largefile_ldflags@
