--- a/gfarm_v2/trunk/man/Makefile
+++ b/gfarm_v2/trunk/man/Makefile
@@ -4,7 +4,6 @@ srcdir = .
 
 include $(top_srcdir)/makes/var.mk
 
-#SUBDIRS = man1 man3 man5 man8 ja
-SUBDIRS = man1 man5 man8 ja
+SUBDIRS = man1 man3 man5 man8 ja
 
 include $(top_srcdir)/makes/subdir.mk
