--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man3/Makefile.inc
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man3/Makefile.inc
@@ -1,12 +1,17 @@
 DOCBOOK = \
 	gfarm.3 \
-	gfs_pio_open.3
+	gfarm_initialize.3 \
+	gfarm_terminate.3 \
+	gfs_pio_close.3 \
+	gfs_pio_create.3 \
+	gfs_pio_open.3 \
+	gfs_pio_read.3 \
+	gfs_pio_write.3
 
 #DOCBOOK = \
 #	gfarm_hostlist_read.3 \
 #	gfarm_import_fragment_config_read.3 \
 #	gfarm_import_fragment_size_alloc.3 \
-#	gfarm_initialize.3 \
 #	gfarm_stringlist_add.3 \
 #	gfarm_stringlist_cat.3 \
 #	gfarm_stringlist_elem.3 \
@@ -26,8 +31,6 @@ DOCBOOK = \
 #	gfs_closedir.3 \
 #	gfs_mkdir.3 \
 #	gfs_opendir.3 \
-#	gfs_pio_close.3 \
-#	gfs_pio_create.3 \
 #	gfs_pio_datasync.3 \
 #	gfs_pio_eof.3 \
 #	gfs_pio_error.3 \
@@ -39,7 +42,6 @@ DOCBOOK = \
 #	gfs_pio_puts.3 \
 #	gfs_pio_putline.3 \
 #	gfs_pio_puts.3 \
-#	gfs_pio_read.3 \
 #	gfs_pio_readdelim.3 \
 #	gfs_pio_readline.3 \
 #	gfs_pio_seek.3 \
@@ -49,7 +51,6 @@ DOCBOOK = \
 #	gfs_pio_set_view_local.3 \
 #	gfs_pio_truncate.3 \
 #	gfs_pio_ungetc.3 \
-#	gfs_pio_write.3 \
 #	gfs_readdir.3 \
 #	gfs_rename.3 \
 #	gfs_realpath.3 \
