re-implement the gfsched command. now, filesystem node status from gfmd POV can be seen by: 	gfsched -M

--- a/gfarm_v2/trunk/gftool/Makefile
+++ b/gfarm_v2/trunk/gftool/Makefile
@@ -27,6 +27,7 @@ SUBDIRS = \
 	gfrep \
 	gfrm \
 	gfrmdir \
+	gfsched \
 	gfstat \
 	gfstatus \
 	gfuser \
@@ -42,7 +43,6 @@ SUBDIRS = \
 #	gfifo \
 #	gfpwd \
 #	gfrcmd \
-#	gfsched \
 #	gfsck \
 #	gfsetdir \
 #	gfmpirun \
