add test cases for #124 (error handlings in gfmd for GFM_PROTO_XATTR_SET, GFM_PROTO_XATTR_GET, GFMPROTO_XATTR_REMOVE, their XML variant protocols, and GFM_ROTO_XMLATTR_FIND are wrong), by using modified version of gfxattr(1), which allows multiple pathnames as its argument. The reason why I didn't update gfxattr(1) command itself is because this change introduces incompatibility to the command line argument of gfxattr(1).

--- a/gfarm_v2/trunk/regress/Makefile
+++ b/gfarm_v2/trunk/regress/Makefile
@@ -14,7 +14,8 @@ SUBDIRS=	\
 	lib/libgfarm/gfarm/gfarm_error_to_errno \
 	lib/libgfarm/gfarm/gfs_pio_test \
 	lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/file_busy \
-	lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/in_progress
+	lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/in_progress \
+	lib/libgfarm/gfarm/gfs_xattr
 
 check test: all
 	@echo ""
