--- a/gfarm_v2/trunk/server/gfmd/Makefile
+++ b/gfarm_v2/trunk/server/gfmd/Makefile
@@ -55,6 +55,7 @@ $(OBJS): $(DEPGFARMINC) \
 	$(GFUTIL_SRCDIR)/id_table.h \
 	$(GFUTIL_SRCDIR)/tree.h \
 	$(GFUTIL_SRCDIR)/thrsubr.h \
+	$(GFARMLIB_SRCDIR)/patmatch.h \
 	$(GFARMLIB_SRCDIR)/gfp_xdr.h \
 	$(GFARMLIB_SRCDIR)/io_fd.h \
 	$(GFARMLIB_SRCDIR)/sockopt.h \
