--- a/gfarm_v2/branches/2.3/include/gfarm/gfarm_config.h.in
+++ b/gfarm_v2/branches/2.3/include/gfarm/gfarm_config.h.in
@@ -137,6 +137,9 @@
 /* Define to 1 if you have the `pwrite' function. */
 #undef HAVE_PWRITE
 
+/* Define to 1 if you have the `random' function. */
+#undef HAVE_RANDOM
+
 /* readline-compatible library exists */
 #undef HAVE_READLINE
 
