fix #149 - gfs_getxattr_cached() erroneously returns GFARM_ERR_RESULT_OUT_OF_RANGE, if *sizep == 0

--- a/gfarm_v2/trunk/regress/Makefile
+++ b/gfarm_v2/trunk/regress/Makefile
@@ -15,7 +15,8 @@ SUBDIRS=	\
 	lib/libgfarm/gfarm/gfs_pio_test \
 	lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/file_busy \
 	lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/in_progress \
-	lib/libgfarm/gfarm/gfs_xattr
+	lib/libgfarm/gfarm/gfs_xattr \
+	lib/libgfarm/gfarm/gfs_getxattr_cached
 
 check test: all
 	@echo ""
