support symbolic link over distributed MDS.   * implemented gfs_realpath.   * most processes of gfm_inode_op and gfm_name_op are shared into     gfm_inode_or_name_op.   * most processes of gfm_rename and gfm_link are shared into gfm_name2_op.   * add attribute cache for lstat.

--- a/gfarm_v2/trunk/regress/Makefile
+++ b/gfarm_v2/trunk/regress/Makefile
@@ -16,7 +16,8 @@ SUBDIRS=	\
 	lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/file_busy \
 	lib/libgfarm/gfarm/gfs_replicate_file_from_to_request/in_progress \
 	lib/libgfarm/gfarm/gfs_xattr \
-	lib/libgfarm/gfarm/gfs_getxattr_cached
+	lib/libgfarm/gfarm/gfs_getxattr_cached \
+	lib/libgfarm/gfarm/gfm_inode_or_name_op_test
 
 check test: all
 	@echo ""
