--- a/gfarm_v2/trunk/regress/lib/libgfarm/gfarm/gfs_xattr/Makefile
+++ b/gfarm_v2/trunk/regress/lib/libgfarm/gfarm/gfs_xattr/Makefile
@@ -4,7 +4,7 @@ srcdir = .
 
 include $(top_srcdir)/makes/var.mk
 
-PROGRAM = gfxattr
+PROGRAM = test_gfxattr
 SRCS = $(PROGRAM).c
 OBJS = $(PROGRAM).o
 CFLAGS = $(COMMON_CFLAGS) -I$(GFUTIL_SRCDIR) -I$(GFARMLIB_SRCDIR) $(openssl_includes)
