* support ACL (like POSIX 1003.1e DRAFT 17)   - new APIs: gfs_acl_*()   - access control by "gfarm.acl_access" of gfarm extended attribute(xattr)   - support default ACL behavior by "gfarm.acl_default" of gfarm xattr   - The owner and gfarmroot can set/remove "gfarm.*" of gfarm xattr.     (include "gfarm.ncopy")   - Anyone can get "gfarm.*" of gfarm xattr.   - [TODO] not implemented commands: gfsetfacl, gfgetfacl
* define gfarm_bswap_16(), gfarm_htol_16() and gfarm_ltoh_16(), etc.
  - *_htol_* : host byte order to little endian
  - *_htob_* : host byte order to big endian
  - *_ltoh_* : little endian to host byte order
  - *_btoh_* : big endian to host byte order

--- a/gfarm_v2/trunk/include/gfarm/gfarm_config.h.in
+++ b/gfarm_v2/trunk/include/gfarm/gfarm_config.h.in
@@ -11,6 +11,9 @@
 /* support XML extended attributs and searching by XPath */
 #undef ENABLE_XMLATTR
 
+/* Define to 1 if you have the <byteswap.h> header file. */
+#undef HAVE_BYTESWAP_H
+
 /* Define to 1 if you have the <crypt.h> header file. */
 #undef HAVE_CRYPT_H
 
