--- a/gfarm_v2/trunk/lib/libgfarm/gfarm/Makefile
+++ b/gfarm_v2/trunk/lib/libgfarm/gfarm/Makefile
@@ -82,6 +82,7 @@ SRCS = \
 	gfs_util.c \
 	gfs_utimes.c \
 	gfs_xattr.c \
+	gfs_acl.c \
 	gfarm_foreach.c \
 	glob.c \
 	humanize_number.c \
@@ -159,6 +160,7 @@ OBJS = \
 	gfs_util.lo \
 	gfs_utimes.lo \
 	gfs_xattr.lo \
+	gfs_acl.lo \
 	gfarm_foreach.lo \
 	glob.lo \
 	humanize_number.lo \
@@ -232,8 +234,9 @@ gfs_stat.lo: $(GFUTIL_SRCDIR)/gfutil.h $(GFUTIL_SRCDIR)/timer.h gfs_profile.h gf
 gfs_statsw.lo: gfs_dircache.h
 gfs_symlink.lo: $(GFUTIL_SRCDIR)/gfutil.h gfm_client.h config.h lookup.h
 gfs_unlink.lo: $(GFUTIL_SRCDIR)/gfutil.h $(GFUTIL_SRCDIR)/timer.h gfs_profile.h
-gfs_utimes.lo: $(GFUTIL_SRCDIR)/gfutil.h config.h gfm_client.h lookup.h 
+gfs_utimes.lo: $(GFUTIL_SRCDIR)/gfutil.h config.h gfm_client.h lookup.h
 gfs_xattr.lo: $(GFUTIL_SRCDIR)/gfutil.h $(GFUTIL_SRCDIR)/timer.h gfm_client.h lookup.h gfs_io.h gfs_misc.h config.h gfs_profile.h xattr_info.h
+gfs_acl.lo: $(GFUTIL_SRCDIR)/gfutil.h
 gfarm_foreach.lo: gfarm_foreach.h
 glob.lo: $(GFUTIL_SRCDIR)/gfutil.h liberror.h patmatch.h
 humanize_number.lo:
