--- a/gfarm_v2/trunk/server/gfmd/Makefile
+++ b/gfarm_v2/trunk/server/gfmd/Makefile
@@ -32,13 +32,13 @@ PUBLIC_OBJS  =
 SRCS =	gfmd.c thrpool.c callout.c \
 	subr.c user.c group.c host.c peer.c dead_file_copy.c \
 	process.c job.c \
-	dir.c inode.c fs.c back_channel.c \
+	dir.c inode.c fs.c back_channel.c acl.c \
 	db_access.c db_common.c db_none.c quota.c xattr.c \
 	$(ldap_srcs) $(postgresql_srcs) $(optional_srcs)
 OBJS =	gfmd.o thrpool.o callout.o \
 	subr.o user.o group.o host.o peer.o dead_file_copy.o \
 	process.o job.o \
-	dir.o inode.o fs.o back_channel.o \
+	dir.o inode.o fs.o back_channel.o acl.o \
 	db_access.o db_common.o db_none.o quota.o xattr.o \
 	$(ldap_objs) $(postgresql_objs) $(optional_objs)
 
@@ -64,7 +64,7 @@ $(OBJS): $(DEPGFARMINC) \
 	$(GFARMLIB_SRCDIR)/gfm_proto.h \
 	$(GFARMLIB_SRCDIR)/gfj_client.h \
 	$(GFARMLIB_SRCDIR)/timespec.h \
-	thrpool.h subr.h callout.h \
+	thrpool.h subr.h callout.h acl.h \
 	user.h group.h host.h peer.h dead_file_copy.h process.h job.h \
 	dir.h inode.h fs.h back_channel.h protocol_state.h quota.h xattr.h
 
