* support ACL   - setfacl and getfacl commands can work on gfarm2fs.   - auto uid/gid mapping:     Unknown global user/group is assigned to unused uid/gid automatically.     Thanks to this, setfacl can work.  - new options: auto_uid_min, auto_uid_max, auto_gid_min, auto_gid_max  - ignore "security.selinux" of extended attribute.    Unless this change, EACCES may occur at "ls -l".  - convert "system.posix_acl_access"(xattr) to "gfarm.acl_access"  - convert "system.posix_acl_default"(xattr) to "gfarm.acl_default"

--- a/gfarm2fs/trunk/Makefile.am
+++ b/gfarm2fs/trunk/Makefile.am
@@ -1,6 +1,7 @@
 bin_PROGRAMS = gfarm2fs
-gfarm2fs_SOURCES = gfarm2fs.c replicate.c open_file.c \
-	gfarm2fs.h replicate.h open_file.h gfarm2fs_msg_enums.h
+gfarm2fs_SOURCES = gfarm2fs.c acl.c id.c replicate.c open_file.c \
+	gfarm2fs.h acl.h id.h replicate.h open_file.h gfarm2fs_msg_enums.h \
+	hash.h
 EXTRA_DIST = RELNOTES LICENSE gfarm2fs.spec $(private_srcs)
 AM_CFLAGS = -Wall
 
